change API for filter on main menu
