# backend/src/app.js
@@ -48,7 +48,7 @@ app.use('/auth', authRouter);
 app.use('/api/v1/counter_types', counterTypeRouter);
 app.use('/api/v1/addresses', addressesRouter);
 app.use('/api/v1/counters', counterRouter);
-app.use('/api/v1/counters/:counter_id/values', counterValuesRouter);
+app.use('/api/v1/counter_values', counterValuesRouter);
 app.use('/api/v1/profile', profileRouter);
 app.use('/api/v1/rate', rateRouter);
 
